--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 aiohttp==3.7.4.post0
-async-timeout==3.0.1
+async-timeout==3.0.1      
 attrs==21.4.0
-certifi==2021.10.8
+certifi==2021.10.8        
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
+discord==1.7.3
 discord.py==1.7.3
 idna==3.3
 multidict==6.0.2
-py-cord==2.0.0b5
+py-cord==1.7.3
 pycparser==2.21
 PyNaCl==1.4.0
 python-dotenv==0.19.2
