--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
-discord.py==1.7.3
+discord.py
 ffmpeg==1.4
 ffmpeg-python==0.2.0
 future==0.18.2
