--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ certifi==2021.10.8
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
-discord.py
+discord==1.7.3
+discord.py==1.7.3
 ffmpeg==1.4
 ffmpeg-python==0.2.0
 future==0.18.2
@@ -13,8 +14,7 @@ idna==3.3
 imageio-ffmpeg==0.4.5
 multidict==6.0.2
 numpy==1.22.3
-py-cord
-pycord
+py-cord==2.0.0b5
 pycparser==2.21
 PyNaCl==1.4.0
 python-dotenv==0.19.2
