--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ idna==3.3
 imageio-ffmpeg==0.4.5
 multidict==6.0.2
 numpy==1.22.3
-py-cord==2.0.0b5
+py-cord==1.7.3
 pycparser==2.21
 PyNaCl==1.4.0
 python-dotenv==0.19.2
