--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
 aiohttp==3.7.4.post0
-async-timeout==3.0.1
+async-timeout==3.0.1      
 attrs==21.4.0
-certifi==2021.10.8
+certifi==2021.10.8        
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
+discord==1.7.3
+discord.py==1.7.3
 ffmpeg==1.4
-ffmpeg-python==0.2.0
+ffmpeg-python==0.2.0      
 future==0.18.2
 idna==3.3
-imageio-ffmpeg==0.4.5
+imageio-ffmpeg==0.4.5     
 multidict==6.0.2
-numpy
-py-cord
+numpy==1.22.3
+py-cord==1.7.3
 pycparser==2.21
 PyNaCl==1.4.0
-python-dotenv==0.19.2
+python-dotenv==0.19.2     
 requests==2.27.1
 six==1.16.0
-typing_extensions==4.1.1
+typing_extensions==4.1.1  
 urllib3==1.26.9
 yarl==1.7.2
-youtube-dl
-discord
+youtube-dl==2021.12.17 
